# defin

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  auto_install.hpp  curate_missing.cpp  fetch_dbmap.hpp  fetch_headers.cpp  fetch_pm.hpp  json_parser_engine.hpp  main.cpp  pm-cmd.json
headers/: curate_missing.hpp  fetch_headers.hpp  resolver.hpp
json-db/: Contributing.md  LICENSE-json.txt  README.md  header-llib.json  llib-pkg_apt.json  llib-pkg_dnf.json  llib-pkg_pacman.json
src/: auto_install.cpp  curate_missing.cpp  fetch_dbmap.cpp  fetch_pm.cpp  json_parser_engine.cpp  main.cpp  resolver.cpp
tiny-process-library/: CMakeLists.txt
